# agentrail-rs

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/agentrail-cli/: Cargo.toml  build.rs
crates/agentrail-cli/src/: main.rs
crates/agentrail-cli/src/commands/: abort.rs  add.rs  archive.rs  audit.rs  begin.rs  complete.rs  distill.rs  gen_agents_doc.rs  history.rs  init.rs  insert.rs  mod.rs  next.rs  plan.rs  reopen.rs  reorder.rs  run_loop.rs  setup.rs  snapshot.rs  status.rs
crates/agentrail-cli/templates/: AGENTS.example.md
crates/agentrail-cli/tests/: audit_tests.rs  cli_tests.rs  run_loop_tests.rs
crates/agentrail-core/: Cargo.toml
crates/agentrail-core/src/: error.rs  lib.rs
crates/agentrail-exec/: Cargo.toml
crates/agentrail-exec/src/: lib.rs
crates/agentrail-store/: Cargo.toml
crates/agentrail-store/src/: archive.rs  audit.rs  domain.rs  git_history.rs  lib.rs  saga.rs  session.rs  skill.rs  snapshot.rs  step.rs  trajectory.rs
crates/agentrail-store/tests/: saga_tests.rs  skill_tests.rs  trajectory_tests.rs
crates/agentrail-validate/: Cargo.toml
crates/agentrail-validate/src/: lib.rs
demo/domain-mock/: domain.toml
demo/domain-mock/executors/: echo.sh  transform.sh  write-file.sh
demo/domain-mock/skills/: write-file.toml
demo/domain-mock/validators/: content-matches.sh  file-exists.sh
demo/scripts/: 01-saga-workflow.sh  02-skill-injection.sh  03-rust-project-with-skills.sh  tape-setup.sh
demo/skills/: clippy-fix.toml  rust-project-init.toml  saga-workflow.toml
demo/tapes/: demo.tape
docs/: ai_agent_instructions.md  architecture.md  backup-plan.md  continue-from-bootstrap.md  demos.md  domain-repos.md  dual-memory.md  getting-started.md  implementation-plan.md  maintenance-mode.md  mike.txt  research-foundations.md  research.txt  user-guide.md
scripts/: agentrail-wizard.sh
