[workspace]
resolver = "2"
members = [
    "crates/agentrail-core",
    "crates/agentrail-store",
    "crates/agentrail-cli",
    "crates/agentrail-exec",
    "crates/agentrail-validate",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/softwarewrighter/agentrail-rs"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
dirs = "6"
tempfile = "3"
