[package]
name = "agentrail-store"
description = "Persistence: saga/step/trajectory storage, session snapshots"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentrail-core = { path = "../agentrail-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
