[package]
name = "agentrail-validate"
description = "Output validators and acceptance contracts"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentrail-core = { path = "../agentrail-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
